# ai-bridge

./: .gitignore  LICENSE  README.md
extension/: manifest.json
extension/background/: service-worker.js
extension/newtab/: index.html  newtab.js
extension/options/: options.html  options.js
extension/sidepanel/: panel.html  panel.js
native-host/: Cargo.toml
native-host/scripts/: install-linux.sh  install-windows.bat
native-host/src/: main.rs
native-host/src/providers/: gemini.rs  mod.rs
shared/: protocol.json
