[package]
name = "ai-bridge-host"
version = "0.1.0"
edition = "2021"
description = "Native messaging host for AI Bridge browser extension"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
dirs = "5"
async-trait = "0.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
